--- a/tetris.html
+++ b/tetris.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-  <div id="board container">
+  <div id="board" class="container">
 
     <div class="row">
       <div class="col-xs-1 col-xs-offset-1">
