working various block sizes

--- a/tetris.html
+++ b/tetris.html
@@ -22,6 +22,8 @@
   <script type="text/javascript" src="js/controller.js"></script>
   <script type="text/javascript" src="js/tetris.js"></script>
   <script type="text/javascript" src="js/view.js"></script>
+  <script type="text/javascript">
+  controller.init()
   </script>
 
 </body>
